--- a/230301-side-project/package.json
+++ b/230301-side-project/package.json
@@ -2,16 +2,26 @@
   "name": "2023-01-side-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "node ./src/app.js",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
     "express": "^4.18.2",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
+    "express-session": "^1.17.3",
+    "sequelize": "^6.29.1"
   }
 }
